backend run, worker run, database set, part of the commands worked, still need to: api checks, unit testings